# zyra

./: README.md  docker-compose.yml  index.html
app/: package-lock.json  package.json  tsconfig.json
app/src/app/: globals.css  page.js
backend/nodejs/: package.json  pnpm-lock.yaml  tsconfig.json
backend/nodejs/sql/: page.jsx  postgres.sql
backend/nodejs/src/: app.ts
chat_server/: .env  package.json  pnpm-lock.yaml
chat_server/src/: server.ts
chat_server/src/config/: redispool.ts
chat_server/src/middleware/: check.jwt.ts
chat_server/src/model/: chat.model.ts
message_vault/: .env  Cargo.toml  Dockerfile  docker-compose.yml
message_vault/src/: main.rs
message_vault/src/client/: mongodb.rs
message_vault/src/routes/: add_data.rs
server/: package.json  pnpm-lock.yaml  tsconfig.json
server/prisma/: schema.prisma
server/src/: server.ts
server/src/lib/: redis.ts
server1/: nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
server1/src/: index.ts
server2/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
server2/src/: index.ts  logger.ts
server3/: package.json  pnpm-lock.yaml
server3/public/: index.html
server3/src/: index.ts
sql/: postgres.sql
zyra/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
zyra/app/: layout.tsx  page.tsx
zyra/components/: DesktopChat.tsx  MobileChat.tsx
zyra/context/: SocketContext.tsx
zyra/global/: api1.ts
zyra/src/: App.css  App.jsx  App.tsx  Home.jsx  NoteFound.jsx  SocketContext.tsx  main.jsx  main.tsx
zyra/store/: authAtoms.ts
zyra/utils/: WindowSize.tsx
(+192 files in other folders)
