[package]
name = "message_vault"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
dotenv = "0.15.0"
mongodb =  "3.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono ={ version="0.4.42" , features = ["serde"]}
anyhow = "1.0"
